<resources>
    <string name="app_name">A6_Group10</string>
    <string name="group_name">Group 10</string>

    <!--  Strings for At Your Service  -->
    <string name="at_your_service">At Your Service</string>
    <string name="search_title">Search anything Anime!</string>
    <string name="search_hint">Anime, Category, etc.</string>
    <string name="search_button">Search</string>
    <string name="anime_type">Anime Type</string>
    <string name="anime_rating">Anime Rating</string>
    <string name="stickerChannelName">Stick It To Em</string>
    <string name="stickerChannelDescription">Yooo, sticker received</string>

    <!--  Strings for Anime Types  -->
    <string-array name="anime_types">
        <item>All</item>
        <item>TV</item>
        <item>Movie</item>
        <item>OVA</item>
        <item>Special</item>
        <item>ONA</item>
        <item>Music</item>
        <item>CM</item>
        <item>PV</item>
        <item>TV Special</item>
    </string-array>

    <!--  Strings for Anime Ratings  -->
    <string-array name="anime_ratings">
        <item>All</item>
        <item>G</item>
        <item>PG</item>
        <item>PG-13</item>
        <item>R-17</item>
    </string-array>

    <!--  Strings for Anime Results  -->
    <string name="results_icon">Results Icon</string>
    <string name="about_button">About us</string>
    <string name="stick_it_to_em_button">Stick It To Em</string>
    <string name="rohan_hasabe">Rohan Hasabe</string>
    <string name="pavan_rao">Pavan Rao</string>
    <string name="rachana_kj">Rachana Kallada Jayaraj</string>
    <string name="hari">Harikrishnan Unnikrishna Pillai</string>
    <string name="select_user">Select User to send the sticker to:</string>
    <string name="selected_sticker">Selected Sticker:</string>
    <string name="users_icon">Users Icon</string>
</resources>